@@ -1,3 +1,8 @@
+2011-05-05  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/discr29.ad[sb]: New test.
+	* gnat.dg/discr30.adb: Likewise.
+
 2011-05-05  Julian Brown  <julian@codesourcery.com>
 
 	* gcc.target/arm/neon-vset_lanes8.c: New test.
